<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.EditProjectFragment">


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="project_description_label, project_description_label"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="10dp" />

    <TextView
        android:id="@+id/project_title_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/project_title_label"
        style="@style/labels"
        android:labelFor="@id/project_title_edit_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/project_title_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintBaseline_toBaselineOf="@id/project_title_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Project title"
        android:autofillHints="Project title"
        android:inputType="text" />

    <TextView
        android:id="@+id/project_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_description_label"
        style="@style/labels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/project_description_edit_text"/>

    <EditText
        android:id="@+id/project_description_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/project_title_edit_text"
        tools:text="This is a project description"
        android:autofillHints="This is a project description"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/labels"
        android:text="@string/project_created_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/project_time"/>

    <EditText
        android:id="@+id/project_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/project_description_edit_text"
        android:inputType="time"
        tools:text="19:20"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@id/project_time"
        app:layout_constraintBaseline_toBaselineOf="@id/project_time"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="20.12.2023"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/project_apply_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/apply_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/project_cancel_button"
        />

    <Button
        android:id="@+id/project_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_label"
        app:layout_constraintStart_toEndOf="@id/project_apply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>